# LLM_Project

./: .dockerignore  Dockerfile  README.md  alembic.ini  config.py  fly.toml  llm.py  main.py  main2.py  main_with_login.py  pyproject.toml  routes.py
alembic/: env.py
alembic/versions/: 1942ee4e5ce9_init.py  43c24edbffe1_init.py  5223797aa36a_init.py  647fdd20168c_init.py  6902d6721c8e_init.py  70624e91acc2_init.py  73de0f49a6e6_init.py  7c60c2e7d62a_init.py  9aa820faaa89_init.py  a55409224c58_init.py  ad33673e80b9_init.py  ccc3ca2bbb14_init.py
app/: Dockerfile  main.py  pyproject.toml
app/app/: models.py  schemas.py
app/app/api/: config.py  db.py  models.py  schemas.py
app/app/database/: db.py
app/app/repository/: history.py  users.py
app/app/routes/: auth.py  history.py  message_history.py  users.py
app/app/services/: auth_decorators.py  upload_avatar.py
app/app/templates/: index.html
app/database/: config.py  db.py  models.py  schemas.py
app/repository/: chat.py  history.py  llm.py  memory.py  user_profile.py  users.py
app/routes/: auth.py  chat.py  history.py  llm.py  llm_api.py  llm_ws.py  upload.py  upload_after_login.py  upload_llm.py  upload_pdf.py  users.py
app/routes/old/: chat.py
app/services/: auth.py  upload_avatar.py
app/templates/: chat.html  chat.py  chat_ws.html  index.html  login.html  start_chat.html  upload.html
llm_project/database/: db.py  models.py  schemas.py
llm_project/repository/: user_profile.py  users.py
llm_project/routes/: auth.py  users.py
llm_project/services/: auth.py  upload_avatar.py
llm_project/static/: styles.css
templates/: index.html
