[tool.poetry]
name = "pdfupload"
version = "0.1.0"
description = ""
authors = ["PolinaDyka0 <115357542+PolinaDyka0@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
python-multipart = "^0.0.6"
uvicorn = "^0.23.2"
cloudinary = "^1.35.0"
config = "^0.5.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
