[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Nataleia Orlovska <nataleia.orlovska@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.12.0"
sqlalchemy = "^2.0.21"
fastapi = "^0.103.1"
psycopg2-binary = "^2.9.8"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
